--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -134,6 +134,7 @@
           background-color: transparent;
           border: none;
           color: $white;
+          width: 100%;
           &::placeholder {
             color: $text-fade;
             font-weight: 300;
@@ -180,12 +181,12 @@
           }
         }
       }
-      .right{
-        .serachbox{
+      .right {
+        .serachbox {
           width: 20rem;
         }
-        .ll{
-          .username{
+        .ll {
+          .username {
             display: none;
           }
         }
@@ -197,12 +198,55 @@
   .DARK-nav_rapper,
   .LIGHT-nav_rapper {
     .fixedwrapper {
-      .right{
-        .ll{
+      .right {
+        .ll {
           margin-left: 2rem;
         }
-        .kl{
+        .kl {
+          margin-left: 1.3rem;
+          font-size: 2.4rem;
+          @include centerByFlex;
+        }
+      }
+    }
+  }
+  .DARK-nav_rapper {
+    .fixedwrapper {
+      .right {
+        .kl {
           color: $white;
+        }
+      }
+    }
+  }
+  .LIGHT-nav_rapper {
+    .fixedwrapper {
+      .right {
+        .kl {
+          color: $primaryDark;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 414px) {
+  .DARK-nav_rapper,
+  .LIGHT-nav_rapper {
+    .fixedwrapper {
+      .left{
+        .logo{
+          margin-left: 1rem;
+        }
+      }
+      .right {
+        margin-right: 1rem;
+        .serachbox{
+          width: 15rem;
+        }
+        .ll {
+          margin-left: 1rem;
+        }
+        .kl {
           margin-left: 1.3rem;
           font-size: 2.4rem;
           @include centerByFlex;
