--- a/src/assets/scss/_notification.scss
+++ b/src/assets/scss/_notification.scss
@@ -113,3 +113,15 @@
     }
   }
 }
+@media only screen and (max-width: 590px) {
+  .DARK-notificationFrame,
+  .LIGHT-notificationFrame {
+    .notificationWrapper {
+      .notificationrow {
+        .outer {
+          max-width: 60rem;
+        }
+      }
+    }
+  }
+}
