--- a/src/assets/scss/_default.scss
+++ b/src/assets/scss/_default.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  transition: background-color border 0.25s;
 }
 html {
   font-size: 62.5%;
