--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -1,6 +1,9 @@
 .mode2 {
   display: none;
 }
+.kl{
+  display: none;
+}
 .DARK-mainframe,
 .LIGHT-mainframe {
   .fixedWrapper .left1 .fullheight .modechange ul li {
