--- a/src/assets/scss/_imageEditor.scss
+++ b/src/assets/scss/_imageEditor.scss
@@ -207,6 +207,11 @@
       border-radius: 10px;
       background-color: $bg-dark;
       overflow: hidden;
+      h4{
+        color: $white;
+        padding: 0.5rem;
+        font-size: 1.5rem;
+      }
       img{
         height: 20rem;
         width: 66rem;
