responsive post popup

--- a/src/assets/scss/_imageEditor.scss
+++ b/src/assets/scss/_imageEditor.scss
@@ -19,7 +19,7 @@
       border-radius: 10px;
       background-color: $bg-dark;
       overflow: hidden;
-      img{
+      img {
         height: 30rem;
         width: 66rem;
         object-fit: contain;
@@ -35,7 +35,7 @@
             padding: 0;
             width: 90%;
           }
-          span{
+          span {
             margin: 0 0.8rem;
             font-size: 1.2rem;
             color: $font-dark;
@@ -78,15 +78,15 @@
               }
             }
           }
-          .active{
+          .active {
             background-color: $scrollbar-light;
           }
         }
       }
-      .btn{
+      .btn {
         display: flex;
         justify-content: end;
-        button{
+        button {
           background-color: $icon-dark;
         }
       }
@@ -113,7 +113,7 @@
       padding: 1rem;
       border-radius: 10px;
       overflow: hidden;
-      img{
+      img {
         height: 30rem;
         width: 66rem;
         object-fit: contain;
@@ -129,7 +129,7 @@
             padding: 0;
             width: 90%;
           }
-          span{
+          span {
             margin: 0 0.8rem;
             font-size: 1.2rem;
             color: $font-light2;
@@ -171,15 +171,15 @@
               }
             }
           }
-          .active{
+          .active {
             background-color: $scrollbar-light;
           }
         }
       }
-      .btn{
+      .btn {
         display: flex;
         justify-content: end;
-        button{
+        button {
           background-color: $icon-light;
         }
       }
@@ -207,17 +207,19 @@
       border-radius: 10px;
       background-color: $bg-dark;
       overflow: hidden;
-      h4{
+      h4 {
         color: $white;
         padding: 0.5rem;
         font-size: 1.5rem;
+        padding: 0.8rem 0;
+        border-bottom: 2px solid $border-dark;
       }
-      img{
+      img {
         height: 20rem;
         width: 66rem;
         object-fit: contain;
       }
-      textarea{
+      textarea {
         margin: 0;
         width: 100%;
         height: 11rem;
@@ -235,12 +237,149 @@
           background-color: $scrollbar-light;
         }
       }
-      
-      .btn{
+
+      .btn {
+        border-top: 1px solid $border-dark;
+        margin-top: 0.8rem;
         display: flex;
         justify-content: end;
-        button{
+        button {
           background-color: $icon-dark;
+        }
+      }
+    }
+  }
+}
+.LIGHT-postImageContainer {
+  position: relative;
+  height: 0.1rem;
+  .overlayContainer {
+    z-index: 9;
+    position: fixed;
+    backdrop-filter: blur(7px) saturate(180%);
+    -webkit-backdrop-filter: blur(7px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.04);
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    @include centerByFlex;
+    .middlebox {
+      border: 1px solid $border-light;
+      background-color: $white;
+      padding: 0.9rem;
+      border-radius: 10px;
+      background-color: $bg-light;
+      overflow: hidden;
+      h4 {
+        color: $primaryDark;
+        padding: 0.5rem;
+        font-size: 1.5rem;
+        padding: 0.8rem 0;
+        border-bottom: 2px solid $border-light;
+      }
+      img {
+        height: 20rem;
+        width: 66rem;
+        object-fit: contain;
+      }
+      textarea {
+        margin: 0;
+        width: 100%;
+        height: 11rem;
+        resize: none;
+        // background-color: rgba($color: $inner-dark, $alpha: 0.45);
+        background-color: transparent;
+        border: none;
+        color: $font-light2;
+        white-space: pre-wrap;
+        &::-webkit-scrollbar {
+          width: 0.5rem;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          background-color: $scrollbar-light;
+        }
+      }
+
+      .btn {
+        margin-top: 0.8rem;
+        border-top: 1px solid $border-light;
+        display: flex;
+        justify-content: end;
+        button {
+          background-color: $icon-light;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 736px) {
+  .DARK-postImageContainer,
+  .LIGHT-postImageContainer {
+    .overlayContainer {
+      .middlebox {
+        img {
+          height: 18rem;
+          width: 60rem;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 642px) {
+  .DARK-postImageContainer,
+  .LIGHT-postImageContainer {
+    .overlayContainer {
+      .middlebox {
+        img {
+          height: 18rem;
+          width: 55rem;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 594px) {
+  .DARK-postImageContainer,
+  .LIGHT-postImageContainer {
+    .overlayContainer {
+      .middlebox {
+        img {
+          height: 15rem;
+          width: 50rem;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 546px) {
+  .DARK-postImageContainer,
+  .LIGHT-postImageContainer {
+    .overlayContainer {
+      .middlebox {
+        img {
+          height: 15rem;
+          width: 40rem;
+        }
+        .btn{
+          button{
+            padding: 1rem 1.5rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 442px) {
+  .DARK-postImageContainer,
+  .LIGHT-postImageContainer {
+    .overlayContainer {
+      .middlebox {
+        img {
+          height: 15rem;
+          width: 30rem;
         }
       }
     }
