--- a/src/assets/scss/_weatherapp.scss
+++ b/src/assets/scss/_weatherapp.scss
@@ -1,7 +1,7 @@
 .rightbar.warm {
   margin: 0.2rem;
   border-radius: 0.5rem;
-  height: 100vh;
+  height: 100%;
   background-image: url("src/components/weather/assets/warm-bg.jpg");
   background-size: cover;
   background-position: bottom;
@@ -69,11 +69,14 @@
 .rightbar {
   margin: 0.2rem;
   border-radius: 0.5rem;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   background-image: url("src/components/weather/assets/cold-bg.jpg");
   background-size: cover;
   background-position: bottom;
   transition: 0.4s ease;
+  border-radius: 8px;
+
 
   .weather-container {
     display: flex;
@@ -86,6 +89,7 @@
         justify-content: flex-start;
         border: 1px solid $border-light;
         border-radius: 3rem;
+        width: 92%;
         background-color:$inner-light;
         box-shadow: 0px 3px rgba(0, 0, 0, 0.2);
       }
