--- a/src/assets/scss/_profilepage.scss
+++ b/src/assets/scss/_profilepage.scss
@@ -51,6 +51,7 @@
     .mypost {
       width: 100%;
       max-width: 75rem;
+      min-width: 75rem;
     }
   }
 }
@@ -108,6 +109,7 @@
     .mypost {
       width: 100%;
       max-width: 75rem;
+      min-width: 75rem;
     }
   }
 }
@@ -118,6 +120,7 @@
       .username5,
       .mypost {
         max-width: 70rem;
+        min-width: 70rem;
       }
     }
   }
@@ -129,6 +132,7 @@
       .username5,
       .mypost {
         max-width: 65rem;
+        min-width: 65rem;
       }
     }
   }
@@ -140,6 +144,7 @@
       .username5,
       .mypost {
         max-width: 60rem;
+        min-width: 60rem;
       }
     }
   }
@@ -150,6 +155,7 @@
     .profileWrapper {
       .username5,
       .mypost {
+        min-width: 50rem;
         max-width: 50rem;
       }
     }
@@ -162,6 +168,7 @@
       .username5,
       .mypost {
         max-width: 40rem;
+        min-width: 40rem;
       }
     }
   }
@@ -172,11 +179,15 @@
     .profileWrapper {
       .username5,
       .mypost {
-        max-width: 60rem;
+        max-width: 50rem;
+        min-width: none;
       }
     }
   }
 }
+
+
+
 @media only screen and (max-width: 398px) {
   .DARK-profileFrame,
   .LIGHT-profileFrame {
@@ -188,10 +199,14 @@
       }
       .name{
         .name1{
-          font-size: 2rem;
+          font-size: 1.5rem;
         }
       }
      }
+     .username5,
+      .mypost {
+        max-width: 50rem;
+      }
     }
   }
 }
