--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -124,11 +124,55 @@
         width: 30rem;
         padding: 0 1rem 0 1rem;
         height: 4rem;
+        position: relative;
 
         .srchicon {
           font-size: 2rem;
           @include centerByFlex;
           color: $text-fade;
+        }
+        .suggessition{
+          background-color: rgba($color: $primaryDark, $alpha: 0.85);
+          position: absolute;
+          top: 110%;
+          left: 0;
+          right: 0;
+          border: 1px solid $border-dark;
+          color: rgba($color: $white, $alpha: 1);
+          padding: 0.9rem 1rem;
+          border-radius: 8px;
+          font-size: 1.5rem;
+          .user{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+            border-radius: 8px;
+            padding: 0.3rem;
+            &:hover{
+              background-color: rgba($color: #93b8b3, $alpha: 0.02);
+            }
+            .left{
+              display: flex;
+              gap: 1rem;
+              align-items: center;
+              .profile{
+                height: 5rem;
+                width: 5rem;
+                border-radius: 50%;
+                overflow: hidden;
+                border: thin solid $border-dark;
+
+              }
+              .info .username{
+                color: #727272;
+              }
+            }
+            .add{
+              font-size: 2rem;
+              cursor: pointer;
+            }
+          }
         }
         .aa {
           background-color: transparent;
