--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -797,6 +797,7 @@
         border-radius: 2rem;
         width: 100%;
         max-width: 75rem;
+        min-width: 75rem;
         .head {
           display: flex;
           justify-content: space-between;
@@ -961,6 +962,7 @@
         .mypost,
         .postcrte {
           max-width: 70rem;
+          min-width: 70rem;
         }
       }
     }
@@ -977,6 +979,7 @@
         .mypost,
         .postcrte {
           max-width: 65rem;
+          min-width: 65rem;
         }
       }
     }
@@ -993,6 +996,7 @@
         .mypost,
         .postcrte {
           max-width: 60rem;
+          min-width: 60rem;
         }
       }
     }
@@ -1085,6 +1089,7 @@
         .mypost,
         .postcrte {
           max-width: 50rem;
+          min-width: 50rem;
         }
       }
     }
@@ -1100,6 +1105,7 @@
       .post {
         .mypost,
         .postcrte {
+          min-width: 40rem;
           max-width: 40rem;
         }
       }
@@ -1116,7 +1122,8 @@
       .post {
         .mypost,
         .postcrte {
-          max-width: 60rem;
+          max-width: 53rem;
+          min-width: 53rem;
         }
       }
       .left1 {
@@ -1131,6 +1138,81 @@
       }
       .smallsidebar-expand {
         transform: translateX(0%);
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .DARK-mainframe,
+  .LIGHT-mainframe {
+    .fixedWrapper {
+      .post {
+        .mypost,
+        .postcrte {
+          max-width: 50rem;
+          min-width: 50rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 544px) {
+  .DARK-mainframe,
+  .LIGHT-mainframe {
+    .fixedWrapper {
+      .post {
+        .mypost,
+        .postcrte {
+          max-width: 45rem;
+          min-width: 45rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 492px) {
+  .DARK-mainframe,
+  .LIGHT-mainframe {
+    .fixedWrapper {
+      .post {
+        .mypost,
+        .postcrte {
+          max-width: 40rem;
+          min-width: 40rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 444px) {
+  .DARK-mainframe,
+  .LIGHT-mainframe {
+    .fixedWrapper {
+      .post {
+        .mypost,
+        .postcrte {
+          max-width: 35rem;
+          min-width: 35rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .DARK-mainframe,
+  .LIGHT-mainframe {
+    .fixedWrapper {
+      .post {
+        .mypost,
+        .postcrte {
+          max-width: 30rem;
+          min-width: 30rem;
+        }
       }
     }
   }
