--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -947,6 +947,42 @@
           @include centerByFlex();
           font-size: 3rem;
         }
+        .user{
+          width: 100%;
+          display: grid;
+          align-items: center;
+          grid-template-columns: auto 4rem;
+          cursor: pointer;
+          border-radius: 8px;
+          padding: 0.3rem 1rem;
+          &:hover{
+            background-color: rgba($color: #93b8b3, $alpha: 0.02);
+          }
+          .left{
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            font-size: 1.3rem;
+            .profile{
+              height: 3rem;
+              width: 3rem;
+              border-radius: 50%;
+              overflow: hidden;
+              border: thin solid $border-dark;
+
+            }
+            .info .username{
+              color: #727272;
+            }
+          }
+          .add{
+            font-size: 2rem;
+            cursor: pointer;
+            display: grid;
+            gap: 0.5rem;
+            grid-template-columns: auto auto;
+          }
+        }
       }
     }
   }
