--- a/src/assets/scss/_message.scss
+++ b/src/assets/scss/_message.scss
@@ -504,6 +504,7 @@
         border: 1px solid $border-dark;
       }
       .msg5 {
+        color: white;
         margin: 0;
         width: 95%;
         border: 0;
